# rewire

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: dependency_injection.md  dependency_injection.py  lifecycle.md  lifecycle.py
rewire/: .gitignore  __init__.py  classproperty.py  config.py  context.py  dependencies.py  lifecycle.py  loader.py  log.py  plugins.py  space.py  store.py
tests/: config_test.py  context_test.py  dependencies_test.py  lifecycle_test.py  plugins_test.plugin.yaml  plugins_test.py
