[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"rewire" = ["py.typed"]

[project]
name = "rewire"
version = "0.10.2"
description = "A Streamlined Type-Based Dependency Injection Framework"
readme = "README.md"
authors = [{ name = "Ivan Vozhakov", email = "gou177@bk.ru" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dependency injection", "configuration managment"]
dependencies = [
    "pydantic >= 2.0.0",
    "anyio >= 4.0.0",
    "PyYAML >= 6.0.1",
    "loguru <= 1.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black", "pytest", "trio", "pytest-anyio", "graphviz"]

[project.urls]
Homepage = "https://github.com/rewirepy/rewire"
